apps/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: audiobookshelf
      port:
        number: 80
  tls:
  - hosts:
    - audiobookshelf
